--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
+  "type": "module",
+  "scripts": {
+    "start": "tsx index.ts"
+  },
   "dependencies": {
-    "@aws-sdk/client-sqs": "^3.658.1"
+    "@aws-sdk/client-sqs": "^3.658.1",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "tsx": "^4.19.1"
+    "@types/node": "^22.7.4",
+    "@types/yargs": "^17.0.33",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2"
   }
 }
