--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -3,6 +3,10 @@ name: Pull request
 on:
   pull_request
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   run-tests:
     runs-on: ubuntu-latest
