--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^22.7.4",
     "@types/yargs": "^17.0.33",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vitest": "^2.1.3"
   }
 }
