--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,7 +10,7 @@ permissions:
 jobs:
   run-tests:
     runs-on: ubuntu-latest
-    # environment: test
+    environment: test
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
